<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_backgroud_back"
            android:padding="15dp"
            app:srcCompat="@drawable/back_arrow" />

        <TextView
            android:id="@+id/title_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/title_register"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inp_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/inp_email"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/btn_back_border"
            android:textSize="20sp"
            android:background="@drawable/inp_radius"
            android:padding="10dp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/inp_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/inp_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/btn_back_border"
            android:textSize="20sp"
            android:background="@drawable/inp_radius"
            android:padding="10dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/inp_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/inp_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/btn_back_border"
            android:textSize="20sp"
            android:background="@drawable/inp_radius"
            android:padding="10dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/inp_phome_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/inp_radius"
            android:ems="10"
            android:hint="@string/inp_phome"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/btn_back_border"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_error_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/red"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_chm_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background_blue"
            android:text="@string/btn_chm_register"
            android:textColor="@color/btn_white"
            android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_login_register_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:text="@string/text_login_register_1"
            android:textAlignment="textEnd"
            android:textColor="@color/dark"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/text_login_register_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:text="@string/text_login_register_2"
            android:textColor="@color/primary"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>